fix: spacings of colorpicker when opening a popup

--- a/packages/default/scss/colorpicker/_layout.scss
+++ b/packages/default/scss/colorpicker/_layout.scss
@@ -61,7 +61,11 @@
             overflow: hidden;
         }
     }
-
+    .k-colorpicker + .k-animation-container {
+        .k-popup {
+            padding: 0;
+        }
+    }
 }
 
 @include exports( "flatcolorpicker/layout" ) {
