--- a/packages/default/scss/popup/_theme.scss
+++ b/packages/default/scss/popup/_theme.scss
@@ -33,6 +33,10 @@
     .k-list > .k-outer-group-header {
         border-color: $grouping-border;
     }
+    .k-popup > .k-colorpalette,
+    .k-popup > .k-flatcolorpicker {
+        background: #f5f5f5;
+    }
 }
 
 @include exports( "list/theme" ) {
